Add axial spectrum figure to manuscript.

--- a/cooling/cooling.tex
+++ b/cooling/cooling.tex
@@ -549,6 +549,12 @@ small zone around $x=y=0$ is unstable.
 
 \subsection{Out-of-plane modes}
 
+\begin{figure}
+  \includegraphics{./figures/fig_axial_spectrum.pdf}
+  \caption{Spectrum of drum head modes.}
+  \label{fig:axial_spectrum}
+\end{figure}
+
 \subsection{In-plane modes}
 
 
